--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>App likes</title>
+  <title>Blossom's Library</title>
+ 
 </head>
 
 <body>
